tests/paczka1/small_fuzzy/95127509.err
Error in line 7: tsI A747 48,5
Error in line 2: 6XYABP S93 54,5
